--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,15 +2,15 @@
 <package >
   <metadata>
     <id>Encoding-Converters-Core</id>
-    <version>0.1.7</version>
+    <version>0.2.4</version>
     <authors>Bob Eaton, Jim Kornelson, SIL International</authors>
     <owners>jnaylor, sillsdev</owners>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/silnrsi/encoding-converters-core</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Libraries and merge modules for core encoding converter functionality.</description>
-    <releaseNotes>Include plugin definitions, tlb, and exe files</releaseNotes>
-    <copyright>Copyright 2017-2020</copyright>
+    <releaseNotes>Includes managed DLL (for including in projects as nuget artifacts) in the .\lib\net45\... folder, and other managed and non-managed (read: non-nuget) resources that optionally may be manually added to projects or at least in installers in the .\runtimes\... folder -- including plugin definitions, tlb, and exe files for both Win32/x86 and x64. Some of the resources are also included in various merge modules in the .\installer\MergeModules... folder</releaseNotes>
+    <copyright>Copyright 2017-2021</copyright>
     <tags></tags>
     <dependencies>
       <group targetFramework=".NETFramework4.5" />
@@ -22,14 +22,14 @@
     <file src="output\Win32\Release\SilEncConverters40.dll" target="lib\net45\Win32"/>
     <file src="output\Win32\Release\*.dll" target="runtimes\Win32" />
     <file src="output\Win32\Release\*.tlb" target="runtimes\Win32" />
-	  <file src="output\Win32\Release\*.exe" target="runtimes\Win32" />
+	<file src="output\Win32\Release\*.exe" target="runtimes\Win32" />
     <file src="output\x64\Release\ECInterfaces.dll" target="lib\net45\x64"/>
     <file src="output\x64\Release\SilEncConverters40.dll" target="lib\net45\x64"/>
     <file src="output\x64\Release\*.dll" target="runtimes\x64" />
     <file src="output\x64\Release\*.tlb" target="runtimes\x64" />
-	  <file src="output\x64\Release\*.exe" target="runtimes\x64" />
-	  <file src="installer\MergeModules\*.msm" target="MergeModules" />
-	  <file src="redist\EC\Plugins\*.xml" target="redist\EC\Plugins" />
+	<file src="output\x64\Release\*.exe" target="runtimes\x64" />
+	<file src="installer\MergeModules\**\*.*" target="MergeModules" exclude="**\*.wixpdb"/>
+	<file src="redist\EC\Plugins\*.xml" target="redist\EC\Plugins" />
     <file src="redist\Help\**\*.*" target="redist\Help" />
   </files>
 </package>
