force the x64 build to build actually for x64 (rather than AnyCPU) -- it was giving us bad image problems loading the x64 C++ DLLs

--- a/src/AIGuesserEC/AIGuesserEC 2010.csproj
+++ b/src/AIGuesserEC/AIGuesserEC 2010.csproj
@@ -43,7 +43,7 @@
     <Optimize>true</Optimize>
     <RegisterForComInterop>true</RegisterForComInterop>
     <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
