--- a/src/SilIndicEncConverters/SilIndicEncConverters 2010.csproj
+++ b/src/SilIndicEncConverters/SilIndicEncConverters 2010.csproj
@@ -53,7 +53,7 @@
     <Optimize>true</Optimize>
     <RegisterForComInterop>true</RegisterForComInterop>
     <DebugType />
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
