added ICU4NET.dll to EC_40 merge modules, which gives us the Thai (etc) break iterator converter (needed downstream for OSE). While verifying the tests, discovered a problem with the Python tests (need both x86 and x64 installations and have to 'set' the proper one for the tests

--- a/src/IcuEC/IcuEC 2010.csproj
+++ b/src/IcuEC/IcuEC 2010.csproj
@@ -98,6 +98,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\icu4net\ICU4NETExtension\IcuBreakIteratorEncConverter.cs">
+      <Link>IcuBreakIteratorEncConverter.cs</Link>
+    </Compile>
     <Compile Include="IcuConvAutoConfigDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +134,10 @@
       <Project>{3E4B908A-4F96-43C5-981B-1AA4B73CCC26}</Project>
       <Name>EncCnvtrs 2010</Name>
       <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\icu4net\ICU4NET\ICU4NET.vcxproj">
+      <Project>{2fadfe38-0429-489f-b910-8a5ec9ab5717}</Project>
+      <Name>ICU4NET</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
