--- a/Package.nuspec
+++ b/Package.nuspec
@@ -1,35 +1,44 @@
 <?xml version="1.0"?>
 <package >
-  <metadata>
-    <id>Encoding-Converters-Core</id>
-    <version>0.2.6</version>
-    <authors>Bob Eaton, Jim Kornelson, SIL International</authors>
-    <owners>jnaylor, sillsdev</owners>
-    <license type="expression">MIT</license>
-    <projectUrl>https://github.com/silnrsi/encoding-converters-core</projectUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Libraries and merge modules for core encoding converter functionality.</description>
-    <releaseNotes>Includes managed DLL (for including in projects as nuget artifacts) in the .\lib\net45\... folder, and other managed and non-managed (read: non-nuget) resources that optionally may be manually added to projects or at least in installers in the .\runtimes\... folder -- including plugin definitions, tlb, and exe files for both Win32/x86 and x64. Some of the resources are also included in various merge modules in the .\installer\MergeModules... folder</releaseNotes>
-    <copyright>Copyright 2017-2021</copyright>
-    <tags></tags>
-    <dependencies>
-      <group targetFramework=".NETFramework4.5" />
-    </dependencies>
-  </metadata>
-  <files>
-	<file src="ReadMe.md" />
-    <file src="output\Win32\Release\ECInterfaces.dll" target="lib\net45\Win32"/>
-    <file src="output\Win32\Release\SilEncConverters40.dll" target="lib\net45\Win32"/>
-    <file src="output\Win32\Release\*.dll" target="runtimes\Win32" />
-    <file src="output\Win32\Release\*.tlb" target="runtimes\Win32" />
-	<file src="output\Win32\Release\*.exe" target="runtimes\Win32" />
-    <file src="output\x64\Release\ECInterfaces.dll" target="lib\net45\x64"/>
-    <file src="output\x64\Release\SilEncConverters40.dll" target="lib\net45\x64"/>
-    <file src="output\x64\Release\*.dll" target="runtimes\x64" />
-    <file src="output\x64\Release\*.tlb" target="runtimes\x64" />
-	<file src="output\x64\Release\*.exe" target="runtimes\x64" />
-	<file src="installer\MergeModules\**\*.*" target="MergeModules" exclude="**\*.wixpdb"/>
-	<file src="redist\EC\Plugins\*.xml" target="redist\EC\Plugins" />
-    <file src="redist\Help\**\*.*" target="redist\Help" />
-  </files>
+	<metadata>
+		<id>Encoding-Converters-Core</id>
+		<version>0.2.16</version>
+		<authors>Bob Eaton, Jim Kornelson, SIL International</authors>
+		<owners>jnaylor, sillsdev</owners>
+		<license type="expression">MIT</license>
+		<projectUrl>https://github.com/silnrsi/encoding-converters-core</projectUrl>
+		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<description>Libraries and merge modules for core encoding converter functionality.</description>
+		<releaseNotes>Includes managed DLL (for including in projects as nuget artifacts) in the .\lib\net45\... folder, and other managed and non-managed (read: non-nuget) resources that optionally may be manually added to projects or at least in installers in the .\runtimes\... folder -- including plugin definitions, tlb, and exe files for both Win32/x86 and x64. Some of the resources are also included in various merge modules in the .\installer\MergeModules... folder</releaseNotes>
+		<copyright>Copyright 2017-2021</copyright>
+		<tags></tags>
+		<dependencies>
+			<group targetFramework=".NETFramework4.5" />
+		</dependencies>
+	</metadata>
+	<files>
+		<file src="ReadMe.md" />
+		<!--these are for when you are building specifically for x86 (not AnyCPU)-->
+		<file src="output\Win32\Release\ECInterfaces.dll" target="lib\net45\x86"/>
+		<file src="output\Win32\Release\SilEncConverters40.dll" target="lib\net45\x86"/>
+		<!--these are for when you are building specifically for x64 (also not AnyCPU)-->
+		<file src="output\x64\Release\ECInterfaces.dll" target="lib\net45\x64"/>
+		<file src="output\x64\Release\SilEncConverters40.dll" target="lib\net45\x64"/>
+		
+		<!--this props file is needed so that when you consume this nuget package, the build will look in the right place for the x86 vs x64
+			depending on the build configured-->
+		<file src="Encoding-Converters-Core.props" target="lib\net45" />
+		<!--these are extra bits that any given application might want to use, but aren't specifically referenced by an EncConverters (managed) client
+			for x86 and then for x64-->
+		<file src="output\Win32\Release\*.dll" target="runtimes\win-x86\native" />
+		<file src="output\Win32\Release\*.tlb" target="runtimes\win-x86\native" />
+		<file src="output\Win32\Release\*.exe" target="runtimes\win-x86\native" />
+		<file src="output\x64\Release\*.dll" target="runtimes\win-x64\native" />
+		<file src="output\x64\Release\*.tlb" target="runtimes\win-x64\native" />
+		<file src="output\x64\Release\*.exe" target="runtimes\win-x64\native" />
+		<!--these are bits for including in an installer (merge modules, plug-ins, and help files-->
+		<file src="installer\MergeModules\**\*.*" target="MergeModules" exclude="**\*.wixpdb"/>
+		<file src="redist\EC\Plugins\*.xml" target="redist\EC\Plugins" />
+		<file src="redist\Help\**\*.*" target="redist\Help" />
+	</files>
 </package>
