Adjust build after recent changes
- RunTests/Main.cs may need adjusted after a recent move of
TestPyScriptEncConverters.
- TestEncConverters.cs needs help finding IcuBreakIteratorEncConverter
on Linux/Mono.
- TestEncCnvtrs-mono.csproj: Add TestPyScriptEncConverters.cs, as
recent TestEncCnvtrs 2010.csproj.

--- a/src/TestEncCnvtrs/TestEncCnvtrs-mono.csproj
+++ b/src/TestEncCnvtrs/TestEncCnvtrs-mono.csproj
@@ -43,6 +43,7 @@
     <Compile Include="TestEncConverters.cs" />
     <Compile Include="TestIcuTranslit.cs" />
     <Compile Include="TestIcuRegex.cs" />
+    <Compile Include="TestPyScriptEncConverters.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
