--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Encoding-Converters-Core</id>
-		<version>0.3.1</version>
+		<version>0.3.6</version>
 		<authors>Bob Eaton, Jim Kornelson, SIL International</authors>
 		<owners>jnaylor, sillsdev</owners>
 		<license type="expression">MIT</license>
@@ -27,18 +27,21 @@
 		
 		<!--this props file is needed so that when you consume this nuget package, the build will look in the right place for the x86 vs x64
 			depending on the build configured (this only appears to work for msbuild, which I don't use...)-->
-		<file src="Encoding-Converters-Core.props" target="lib\net45" />
+		<file src="build\Encoding-Converters-Core.props" target="lib\net45" />
+
+		<file src="build\Init.ps1" target="tools\Init.ps1" />
+		
 		<!--these are extra bits that any given application might want to use, but aren't specifically referenced by an EncConverters (managed) client
 			for x86 and then for x64-->
-		<file src="output\Win32\Release\*.dll" target="runtimes\win-x86\native" />
-		<file src="output\Win32\Release\*.tlb" target="runtimes\win-x86\native" />
-		<file src="output\Win32\Release\*.exe" target="runtimes\win-x86\native" />
-		<file src="output\x64\Release\*.dll" target="runtimes\win-x64\native" />
-		<file src="output\x64\Release\*.tlb" target="runtimes\win-x64\native" />
-		<file src="output\x64\Release\*.exe" target="runtimes\win-x64\native" />
+		<file src="output\Win32\Release\*.dll" target="runtimes\EcDistFiles\win-x86\native" />
+		<file src="output\Win32\Release\*.tlb" target="runtimes\EcDistFiles\win-x86\native" />
+		<file src="output\Win32\Release\*.exe" target="runtimes\EcDistFiles\win-x86\native" />
+		<file src="output\x64\Release\*.dll" target="runtimes\EcDistFiles\win-x64\native" />
+		<file src="output\x64\Release\*.tlb" target="runtimes\EcDistFiles\win-x64\native" />
+		<file src="output\x64\Release\*.exe" target="runtimes\EcDistFiles\win-x64\native" />
 		<!--these are bits for including in an installer (merge modules, plug-ins, and help files-->
-		<file src="installer\MergeModules\**\*.*" target="MergeModules" exclude="**\*.wixpdb"/>
-		<file src="redist\EC\Plugins\*.xml" target="redist\EC\Plugins" />
-		<file src="redist\Help\**\*.*" target="redist\Help" />
+		<file src="installer\MergeModules\**\*.*" target="runtimes\EcDistFiles\MergeModules" exclude="**\*.wixpdb"/>
+		<file src="redist\EC\Plugins\*.xml" target="runtimes\EcDistFiles\redist\EC\Plugins" />
+		<file src="redist\Help\**\*.*" target="runtimes\EcDistFiles\redist\Help" />
 	</files>
 </package>
