--- a/src/EncCnvtrs/EncCnvtrs 2010.csproj
+++ b/src/EncCnvtrs/EncCnvtrs 2010.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion>9.0.21022</ProductVersion>
@@ -35,7 +35,7 @@
     </SccAuxPath>
     <SignAssembly>true</SignAssembly>
     <OldToolsVersion>3.5</OldToolsVersion>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -58,13 +58,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>$(SolutionDir)output\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;LoadGeckoLibs;X64</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <RegisterForComInterop>true</RegisterForComInterop>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
@@ -72,12 +73,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>$(SolutionDir)output\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;LoadGeckoLibs;X64</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RegisterForComInterop>true</RegisterForComInterop>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
@@ -85,41 +87,46 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>$(SolutionDir)output\Win32\$(Configuration)\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;LoadGeckoLibs</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <RegisterForComInterop>true</RegisterForComInterop>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>$(SolutionDir)output\Win32\$(Configuration)\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;LoadGeckoLibs</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RegisterForComInterop>true</RegisterForComInterop>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Geckofx-Core, Version=45.0.34.0, Culture=neutral, PublicKeyToken=3209ac31600d1857, processorArchitecture=MSIL">
+    <Reference Include="Geckofx-Core, Version=45.0.34.0, Culture=neutral, PublicKeyToken=3209ac31600d1857, processorArchitecture=MSIL" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU') and '$(OS)'=='Windows_NT'">
+      <HintPath>..\..\packages\Geckofx45.45.0.34\lib\net45\Geckofx-Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Geckofx-Core, Version=45.0.34.0, Culture=neutral, PublicKeyToken=3209ac31600d1857, processorArchitecture=MSIL" Condition="'$(Platform)' == 'x64' and '$(OS)'=='Windows_NT'">
       <HintPath>..\..\packages\Geckofx45.64.45.0.34\lib\net45\Geckofx-Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Geckofx-Winforms, Version=45.0.34.0, Culture=neutral, PublicKeyToken=3209ac31600d1857, processorArchitecture=MSIL" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU') and '$(OS)'=='Windows_NT'">
+      <HintPath>..\..\packages\Geckofx45.45.0.34\lib\net45\Geckofx-Winforms.dll</HintPath>
+    </Reference>
+    <Reference Include="Geckofx-Winforms, Version=45.0.34.0, Culture=neutral, PublicKeyToken=3209ac31600d1857, processorArchitecture=MSIL" Condition="'$(Platform)' == 'x64' and '$(OS)'=='Windows_NT'">
+      <HintPath>..\..\packages\Geckofx45.64.45.0.34\lib\net45\Geckofx-Winforms.dll</HintPath>
     </Reference>
     <Reference Include="Geckofx-Core" Condition="'$(Platform)' == 'x64' and '$(OS)'!='Windows_NT'">
       <Private>False</Private>
       <HintPath>../../packages/Geckofx45.64.Linux.45.0.21.0/lib/net40/Geckofx-Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Geckofx-Winforms" Condition="'$(Platform)' == 'x64' and '$(OS)'!='Windows_NT'">
-      <Private>False</Private>
-      <HintPath>../../packages/Geckofx45.64.Linux.45.0.21.0/lib/net40/Geckofx-Winforms.dll</HintPath>
     </Reference>
     <Reference Include="Geckofx-Core" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU') and '$(OS)'!='Windows_NT'">
       <Private>False</Private>
@@ -129,12 +136,17 @@
       <Private>False</Private>
       <HintPath>../../packages/Geckofx45.32.Linux.45.0.21.0/lib/net40/Geckofx-Winforms.dll</HintPath>
     </Reference>
-    <Reference Include="Geckofx-Winforms, Version=45.0.34.0, Culture=neutral, PublicKeyToken=3209ac31600d1857, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Geckofx45.64.45.0.34\lib\net45\Geckofx-Winforms.dll</HintPath>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Web.WebView2.Core, Version=1.0.902.49, Culture=neutral, PublicKeyToken=2a8ab48044d2601e, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Web.WebView2.1.0.902.49\lib\net45\Microsoft.Web.WebView2.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Web.WebView2.WinForms, Version=1.0.902.49, Culture=neutral, PublicKeyToken=2a8ab48044d2601e, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Web.WebView2.1.0.902.49\lib\net45\Microsoft.Web.WebView2.WinForms.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -145,6 +157,8 @@
     <Reference Include="System.Drawing">
       <Name>System.Drawing</Name>
     </Reference>
+    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+    <Reference Include="System.Text.Json, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL" />
     <Reference Include="System.Windows.Forms">
       <Name>System.Windows.Forms</Name>
     </Reference>
@@ -207,9 +221,20 @@
     </Compile>
     <Compile Include="FallbackEncConverter.cs" />
     <Compile Include="FallbackEncConverterConfig.cs" />
-    <Compile Include="GeckoFxInitializer.cs" />
     <Compile Include="IEncConverterConfig.cs">
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="WebBrowserGecko.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="WebBrowserEdge.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="WebBrowserInstructions.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="WebBrowserIE.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ImplTypeList.cs">
       <SubType>Form</SubType>
@@ -292,33 +317,49 @@
     <Content Include="buildinclude.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Firefox\AccessibleMarshal.dll" />
-    <Content Include="Firefox\breakpadinjector.dll" />
-    <Content Include="Firefox\d3dcompiler_47.dll" />
-    <Content Include="Firefox\freebl3.dll" />
-    <Content Include="Firefox\icudt58.dll" />
-    <Content Include="Firefox\icuin58.dll" />
-    <Content Include="Firefox\icuuc58.dll" />
-    <Content Include="Firefox\lgpllibs.dll" />
-    <Content Include="Firefox\libEGL.dll" />
-    <Content Include="Firefox\libGLESv2.dll" />
-    <Content Include="Firefox\mozglue.dll" />
-    <Content Include="Firefox\nss3.dll" />
-    <Content Include="Firefox\nssckbi.dll" />
-    <Content Include="Firefox\nssdbm3.dll" />
-    <Content Include="Firefox\plugin-container.exe" />
-    <Content Include="Firefox\plugin-hang-ui.exe" />
-    <Content Include="Firefox\sandboxbroker.dll" />
-    <Content Include="Firefox\softokn3.dll" />
-    <Content Include="Firefox\xul.dll" />
+    <Content Include="Firefox\AccessibleMarshal.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\breakpadinjector.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\d3dcompiler_47.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\freebl3.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\icudt58.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\icuin58.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\icuuc58.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\lgpllibs.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\libEGL.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\libGLESv2.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\mozglue.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\nss3.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\nssckbi.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\nssdbm3.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\plugin-container.exe" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\plugin-hang-ui.exe" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\sandboxbroker.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\softokn3.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox\xul.dll" Condition="('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+    <Content Include="Firefox64\AccessibleMarshal.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\breakpadinjector.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\d3dcompiler_47.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\freebl3.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\icudt58.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\icuin58.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\icuuc58.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\lgpllibs.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\libEGL.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\libGLESv2.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\mozglue.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\nss3.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\nssckbi.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\nssdbm3.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\plugin-container.exe" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\plugin-hang-ui.exe" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\sandboxbroker.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\softokn3.dll" Condition="('$(Platform)' == 'x64')" />
+    <Content Include="Firefox64\xul.dll" Condition="('$(Platform)' == 'x64')" />
     <Content Include="TRFFC17.ICO" />
     <EmbeddedResource Include="WebBrowserAdaptor.resx">
       <DependentUpon>WebBrowserAdaptor.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="..\..\installer\EC_40.mm.wxs">
-      <Link>EC_40.mm.wxs</Link>
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="app.config" />
     <None Include="app.manifest" />
     <None Include="ECPlugins.xsc">
       <DependentUpon>ECPlugins.xsd</DependentUpon>
@@ -366,13 +407,15 @@
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
-  <Import Project="..\..\packages\Geckofx45.45.0.34\build\Geckofx45.targets" Condition="Exists('..\..\packages\Geckofx45.45.0.34\build\Geckofx45.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
+    <Error Condition="!Exists('..\..\packages\Microsoft.Web.WebView2.1.0.902.49\build\Microsoft.Web.WebView2.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Microsoft.Web.WebView2.1.0.902.49\build\Microsoft.Web.WebView2.targets'))" />
     <Error Condition="!Exists('..\..\packages\Geckofx45.45.0.34\build\Geckofx45.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Geckofx45.45.0.34\build\Geckofx45.targets'))" />
     <Error Condition="!Exists('..\..\packages\Geckofx45.64.45.0.34\build\Geckofx45.64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Geckofx45.64.45.0.34\build\Geckofx45.64.targets'))" />
   </Target>
-  <Import Project="..\..\packages\Geckofx45.64.45.0.34\build\Geckofx45.64.targets" Condition="Exists('..\..\packages\Geckofx45.64.45.0.34\build\Geckofx45.64.targets')" />
+  <Import Project="..\..\packages\Microsoft.Web.WebView2.1.0.902.49\build\Microsoft.Web.WebView2.targets" Condition="Exists('..\..\packages\Microsoft.Web.WebView2.1.0.902.49\build\Microsoft.Web.WebView2.targets')" />
+  <Import Project="..\..\packages\Geckofx45.45.0.34\build\Geckofx45.targets" Condition="Exists('..\..\packages\Geckofx45.45.0.34\build\Geckofx45.targets') AND ('$(Platform)' == 'x86' or '$(Platform)' == 'AnyCPU')" />
+  <Import Project="..\..\packages\Geckofx45.64.45.0.34\build\Geckofx45.64.targets" Condition="Exists('..\..\packages\Geckofx45.64.45.0.34\build\Geckofx45.64.targets') AND ('$(Platform)' == 'x64')" />
 </Project>
