--- a/src/TestEncCnvtrs/packages.config
+++ b/src/TestEncCnvtrs/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnitTestAdapter" version="2.2.0" targetFramework="net45" />
+  <package id="NUnit" version="3.13.2" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="4.0.0" targetFramework="net472" />
 </packages>
